--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ a {
   line-height: 1.17;
   /* --color3: var(--color-description); */
   /* transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1); */
-  transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-contact:hover,
@@ -504,7 +504,7 @@ img {
   bottom: 0;
   left: 0;
   transform: translateY(100%);
-  transition: transform 250ms ease;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   background-color: rgba(33, 150, 243, 0.9);
   color: #ffffff;
