--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,11 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
+  transform: scale(0);
 }
 
 .modal {
@@ -46,7 +45,6 @@ body {
   position: absolute;
   top: 8px;
   right: 8px;
-
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -113,15 +111,12 @@ a {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.17;
-  /* --color3: var(--color-description); */
-  /* transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1); */
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-contact:hover,
 .menu-contact:focus {
   color: var(--colorchange);
-  /* fill: var(--colorchange); */
   outline: none;
 }
 
@@ -525,6 +520,7 @@ img {
 .nav-icon {
   fill: var(--color-description);
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-contact a {
@@ -560,8 +556,8 @@ img {
   justify-content: center;
   background-color: rgba(255, 255, 255, 1);
   fill: var(--color-icon);
-  transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link svg {
   width: 20px;
